CS_445/hw04/parser.output
State 42 conflicts: 1 shift/reduce
State 79 conflicts: 1 shift/reduce
State 97 conflicts: 2 shift/reduce
State 191 conflicts: 14 shift/reduce
State 199 conflicts: 1 shift/reduce
State 234 conflicts: 3 shift/reduce
State 395 conflicts: 1 shift/reduce
State 451 conflicts: 1 shift/reduce
State 470 conflicts: 1 shift/reduce
State 531 conflicts: 1 shift/reduce
State 533 conflicts: 1 shift/reduce
State 541 conflicts: 1 shift/reduce


Grammar

    0 $accept: compilationUnit $end

    1 compilationUnit: as2CompilationUnit
    2                | as3CompilationUnit

    3 as2CompilationUnit: importDefinitions as2Type

    4 importDefinitions: importDefinitions importDefinition
    5                  | /* empty */

    6 as2Type: annotations modifiers as2ClassDefinition
    7        | annotations modifiers as2InterfaceDefinition

    8 as3CompilationUnit: packageDecl packageBlockEntries EOFX

    9 packageBlockEntries: packageBlockEntries packageBlockEntry
   10                    | /* empty */

   11 packageDecl: PACKAGE identifier packageBlock
   12            | PACKAGE packageBlock

   13 packageBlock: LCURLY packageBlockEntries RCURLY

   14 packageBlockEntry: importDefinition
   15                  | annotations modifiers classDefinition
   16                  | annotations modifiers interfaceDefinition
   17                  | annotations modifiers variableDefinition
   18                  | annotations modifiers methodDefinition
   19                  | annotations modifiers namespaceDefinition
   20                  | annotations modifiers useNamespaceDirective
   21                  | SEMI

   22 importDefinition: IMPORT identifierStar semi

   23 semi: SEMI

   24 classDefinition: CLASS ident classExtendsClause typeBlock

   25 as2ClassDefinition: CLASS identifier classExtendsClause implementsClause typeBlock

   26 interfaceDefinition: INTERFACE ident interfaceExtendsClause typeBlock

   27 as2InterfaceDefinition: INTERFACE identifier interfaceExtendsClause typeBlock

   28 classExtendsClause: EXTENDS identifier
   29                   | /* empty */

   30 interfaceExtendsClause: EXTENDS identifier commaIdentifiers
   31                       | /* empty */

   32 commaIdentifiers: COMMA identifier commaIdentifiers
   33                 | /* empty */

   34 implementsClause: IMPLEMENTS identifier commaIdentifiers
   35                 | /* empty */

   36 typeBlock: LCURLY typeBlockEntries RCURLY

   37 typeBlockEntries: typeBlockEntry typeBlockEntries
   38                 | /* empty */

   39 typeBlockEntry: annotations modifiers variableDefinition
   40               | annotations modifiers methodDefinition
   41               | importDefinition
   42               | as2IncludeDirective

   43 as2IncludeDirective: INCLUDE_DIRECTIVE STRING_LITERAL

   44 includeDirective: INCLUDE STRING_LITERAL semi

   45 blockOrSemi: block
   46            | semi

   47 optionalTypeExpression: typeExpression
   48                       | /* empty */

   49 methodDefinition: FUNCTION optionalAccessorRole ident parameterDeclarationList optionalTypeExpression blockOrSemi

   50 optionalAccessorRole: accessorRole
   51                     | /* empty */

   52 accessorRole: GET
   53             | SET

   54 namespaceDefinition: NAMESPACE ident

   55 useNamespaceDirective: USE NAMESPACE ident semi

   56 commaVariableDeclarators: COMMA variableDeclarator commaVariableDeclarators
   57                         | /* empty */

   58 variableDefinition: varOrConst variableDeclarator commaVariableDeclarators semi

   59 varOrConst: VAR
   60           | CONST

   61 optionalVariableInitializer: variableInitializer
   62                            | /* empty */

   63 variableDeclarator: ident optionalTypeExpression optionalVariableInitializer
   64                   | optionalTypeExpression optionalVariableInitializer

   65 declaration: varOrConst variableDeclarator declarationTail

   66 declarationTail: commaVariableDeclarators

   67 variableInitializer: ASSIGN assignmentExpression

   68 commaParameterDeclaration: COMMA parameterDeclaration commaParameterDeclaration
   69                          | /* empty */

   70 parameterDeclarationList: LPAREN RPAREN
   71                         | LPAREN parameterDeclaration commaParameterDeclaration RPAREN

   72 parameterDeclaration: basicParameterDeclaration
   73                     | parameterRestDeclaration

   74 basicParameterDeclaration: ident optionalTypeExpression parameterDefault
   75                          | CONST ident optionalTypeExpression parameterDefault
   76                          | ident optionalTypeExpression
   77                          | CONST ident optionalTypeExpression

   78 parameterDefault: ASSIGN assignmentExpression

   79 parameterRestDeclaration: REST ident
   80                         | REST

   81 blockEntries: blockEntry blockEntries
   82             | /* empty */

   83 block: LCURLY blockEntries RCURLY

   84 blockEntry: statement

   85 condition: LPAREN expression RPAREN

   86 statement: superStatement
   87          | block
   88          | declarationStatement
   89          | expressionStatement
   90          | ifStatement
   91          | forEachStatement
   92          | forStatement
   93          | whileStatement
   94          | doWhileStatement
   95          | withStatement
   96          | switchStatement
   97          | breakStatement
   98          | continueStatement
   99          | returnStatement
  100          | throwStatement
  101          | tryStatement
  102          | defaultXMLNamespaceStatement
  103          | SEMI

  104 superStatement: SUPER arguments semi

  105 declarationStatement: declaration semi

  106 expressionStatement: expressionList semi

  107 ifStatement: IF condition statement elseClause
  108            | IF condition statement

  109 elseClause: ELSE statement

  110 throwStatement: THROW expression semi

  111 tryStatement: TRY block finallyBlock
  112             | TRY block catchBlocks finallyBlock
  113             | TRY block catchBlocks

  114 catchBlocks: catchBlock catchBlocks
  115            | /* empty */

  116 catchBlock: CATCH LPAREN ident optionalTypeExpression RPAREN block

  117 finallyBlock: FINALLY block

  118 returnStatement: RETURN expression semi
  119                | RETURN semi

  120 continueStatement: CONTINUE semi

  121 breakStatement: BREAK semi

  122 switchStatement: SWITCH condition switchBlock

  123 switchBlock: LCURLY caseStatements RCURLY

  124 caseStatements: caseStatements caseStatement
  125               | /* empty */

  126 caseStatement: CASE expression COLON switchStatementList

  127 optionalDefaultStatement: defaultStatement
  128                         | /* empty */

  129 defaultStatement: DEFAULT COLON switchStatementList

  130 switchStatementList: statements optionalDefaultStatement

  131 statements: statement statements
  132           | /* empty */

  133 forEachStatement: FOR EACH LPAREN forInClause RPAREN statement

  134 forStatement: FOR LPAREN forInClause RPAREN statement
  135             | FOR LPAREN traditionalForClause RPAREN statement

  136 traditionalForClause: forInit SEMI forCond SEMI forIter

  137 forInClause: forInClauseDecl IN forInClauseTail

  138 forInClauseDecl: declaration

  139 forInClauseTail: expressionList

  140 forInit: declaration
  141        | expressionList
  142        | /* empty */

  143 forCond: expressionList
  144        | /* empty */

  145 forIter: expressionList
  146        | /* empty */

  147 whileStatement: WHILE condition statement

  148 doWhileStatement: DO statement WHILE condition semi

  149 withStatement: WITH condition statement

  150 defaultXMLNamespaceStatement: DEFAULT XML NAMESPACE ASSIGN expression semi

  151 typeExpression: COLON identifier
  152               | COLON VOID
  153               | COLON STAR

  154 identifier: qualifiedIdent

  155 propertyIdentifier: STAR
  156                   | ident

  157 qualifier: propertyIdentifier
  158          | reservedNamespace

  159 simpleQualifiedIdentifier: propertyIdentifier
  160                          | qualifier DBL_COLON propertyIdentifier
  161                          | qualifier DBL_COLON brackets

  162 expressionQualifiedIdentifier: encapsulatedExpression DBL_COLON propertyIdentifier
  163                              | encapsulatedExpression DBL_COLON brackets

  164 nonAttributeQualifiedIdentifier: simpleQualifiedIdentifier
  165                                | expressionQualifiedIdentifier

  166 qualifiedIdentifier: e4xAttributeIdentifier
  167                    | nonAttributeQualifiedIdentifier

  168 qualifiedIdent: namespaceName DBL_COLON ident
  169               | ident

  170 namespaceName: IDENT
  171              | reservedNamespace

  172 reservedNamespace: PUBLIC
  173                  | PRIVATE
  174                  | PROTECTED
  175                  | INTERNAL

  176 dotIdents: DOT ident dotIdents
  177          | /* empty */

  178 identifierStar: ident dotIdents DOT STAR
  179               | ident dotIdents

  180 annotations: annotation annotations
  181            | includeDirective annotations
  182            | /* empty */

  183 annotation: LBRACK ident annotationParamList RBRACK
  184           | LBRACK ident RBRACK

  185 moreAnnotationParams: COMMA annotationParam moreAnnotationParams
  186                     | /* empty */

  187 annotationParamList: LPAREN annotationParam moreAnnotationParams RPAREN
  188                    | LPAREN RPAREN

  189 annotationParam: ident ASSIGN constant
  190                | constant
  191                | ident

  192 modifiers: modifier modifiers
  193          | /* empty */

  194 modifier: namespaceName
  195         | STATIC
  196         | FINAL
  197         | ENUMERABLE
  198         | EXPLICIT
  199         | OVERRIDE
  200         | DYNAMIC
  201         | INTRINSIC

  202 arguments: LPAREN expressionList RPAREN
  203          | LPAREN RPAREN

  204 arrayLiteral: LBRACK elementList RBRACK
  205             | LBRACK RBRACK

  206 elementList: COMMA
  207            | nonemptyElementList

  208 moreAssignmentExpressions: COMMA assignmentExpression moreAssignmentExpressions
  209                          | /* empty */

  210 nonemptyElementList: assignmentExpression moreAssignmentExpressions

  211 element: assignmentExpression

  212 objectLiteral: LCURLY fieldList RCURLY
  213              | LCURLY RCURLY

  214 moreLiteralFields: COMMA literalField moreLiteralFields
  215                  | COMMA
  216                  | /* empty */

  217 fieldList: literalField moreLiteralFields

  218 literalField: fieldName COLON element

  219 fieldName: ident
  220          | number

  221 expression: assignmentExpression

  222 expressionList: assignmentExpression moreAssignmentExpressions

  223 assignmentExpression: conditionalExpression assignmentOperator assignmentExpression
  224                     | conditionalExpression

  225 assignmentOperator: ASSIGN
  226                   | STAR_ASSIGN
  227                   | DIV_ASSIGN
  228                   | MOD_ASSIGN
  229                   | PLUS_ASSIGN
  230                   | MINUS_ASSIGN
  231                   | SL_ASSIGN
  232                   | SR_ASSIGN
  233                   | BSR_ASSIGN
  234                   | BAND_ASSIGN
  235                   | BXOR_ASSIGN
  236                   | BOR_ASSIGN
  237                   | LAND_ASSIGN
  238                   | LOR_ASSIGN

  239 conditionalExpression: logicalOrExpression
  240                      | logicalOrExpression QUESTION conditionalSubExpression

  241 conditionalSubExpression: assignmentExpression COLON assignmentExpression

  242 logicalOrExpression: logicalAndExpression
  243                    | logicalAndExpression logicalOrOperator logicalOrExpression

  244 logicalOrOperator: LOR
  245                  | OR

  246 logicalAndExpression: bitwiseOrExpression
  247                     | bitwiseOrExpression logicalAndOperator logicalAndExpression

  248 logicalAndOperator: LAND
  249                   | AND

  250 bitwiseOrExpression: bitwiseXorExpression
  251                    | bitwiseXorExpression BOR bitwiseOrExpression

  252 bitwiseXorExpression: bitwiseAndExpression
  253                     | bitwiseAndExpression BXOR bitwiseXorExpression

  254 bitwiseAndExpression: equalityExpression
  255                     | equalityExpression BAND bitwiseAndExpression

  256 equalityExpression: relationalExpression
  257                   | relationalExpression equalityOperator equalityExpression

  258 equalityOperator: STRICT_EQUAL
  259                 | STRICT_NOT_EQUAL
  260                 | NOT_EQUAL
  261                 | EQUAL

  262 relationalExpression: shiftExpression
  263                     | shiftExpression relationalOperator relationalExpression

  264 relationalOperator: IN
  265                   | LT
  266                   | GT
  267                   | LE
  268                   | GE
  269                   | IS
  270                   | AS
  271                   | INSTANCEOF

  272 shiftExpression: additiveExpression
  273                | additiveExpression shiftOperator shiftExpression

  274 shiftOperator: SL
  275              | SR
  276              | BSR

  277 additiveExpression: multiplicativeExpression
  278                   | multiplicativeExpression additiveOperator additiveExpression

  279 additiveOperator: PLUS
  280                 | MINUS

  281 multiplicativeExpression: unaryExpression
  282                         | unaryExpression multiplicativeOperator multiplicativeExpression

  283 multiplicativeOperator: STAR
  284                       | DIV
  285                       | MOD

  286 unaryExpression: INC unaryExpression
  287                | DEC unaryExpression
  288                | MINUS unaryExpression
  289                | PLUS unaryExpression
  290                | unaryExpressionNotPlusMinus

  291 unaryExpressionNotPlusMinus: DELETE postfixExpression
  292                            | VOID unaryExpression
  293                            | TYPEOF unaryExpression
  294                            | LNOT unaryExpression
  295                            | BNOT unaryExpression
  296                            | postfixExpression

  297 postfixExpression: postfixExpression2
  298                  | postfixExpression2 INC
  299                  | postfixExpression2 DEC

  300 postfixExpression2: primaryExpression
  301                   | postfixExpression LBRACK expression RBRACK
  302                   | postfixExpression E4X_DESC qualifiedIdentifier
  303                   | postfixExpression DOT LPAREN expression RPAREN
  304                   | postfixExpression DOT e4xAttributeIdentifier
  305                   | postfixExpression DOT STAR
  306                   | postfixExpression arguments

  307 e4xAttributeIdentifier: E4X_ATTRI qualifiedIdent
  308                       | E4X_ATTRI STAR
  309                       | E4X_ATTRI LBRACK expression RBRACK

  310 primaryExpression: UNDEFINED
  311                  | constant
  312                  | arrayLiteral
  313                  | objectLiteral
  314                  | functionExpression
  315                  | newExpression
  316                  | encapsulatedExpression
  317                  | e4xAttributeIdentifier
  318                  | qualifiedIdent

  319 constant: number
  320         | STRING_LITERAL
  321         | TRUE
  322         | FALSE
  323         | NULL_VAL

  324 number: HEX_LITERAL
  325       | DECIMAL_LITERAL
  326       | OCTAL_LITERAL
  327       | FLOAT_LITERAL

  328 newExpression: NEW fullNewSubexpression arguments
  329              | NEW fullNewSubexpression

  330 fullNewSubexpression: primaryExpression
  331                     | fullNewSubexpression DOT qualifiedIdent
  332                     | fullNewSubexpression brackets

  333 brackets: LBRACK expressionList RBRACK

  334 encapsulatedExpression: LPAREN assignmentExpression RPAREN

  335 functionSignature: parameterDeclarationList optionalTypeExpression

  336 functionCommon: functionSignature block

  337 functionExpression: FUNCTION IDENT functionCommon
  338                   | FUNCTION functionCommon

  339 ident: IDENT
  340      | USE
  341      | XML
  342      | DYNAMIC
  343      | NAMESPACE
  344      | IS
  345      | AS
  346      | GET
  347      | SET


Terminals, with rules where they appear

$end (0) 0
error (256)
PACKAGE (258) 11 12
PUBLIC (259) 172
PRIVATE (260) 173
PROTECTED (261) 174
INTERNAL (262) 175
OVERRIDE (263) 199
FUNCTION (264) 49 337 338
EXTENDS (265) 28 30
IMPLEMENTS (266) 34
VAR (267) 59
STATIC (268) 195
IF (269) 107 108
IMPORT (270) 22
FOR (271) 133 134 135
EACH (272) 133
IN (273) 137 264
WHILE (274) 147 148
DO (275) 148
SWITCH (276) 122
CASE (277) 126
DEFAULT (278) 129 150
ELSE (279) 109
CONST (280) 60 75 77
CLASS (281) 24 25
INTERFACE (282) 26 27
TRUE (283) 321
FALSE (284) 322
DYNAMIC (285) 200 342
USE (286) 55 340
XML (287) 150 341
NAMESPACE (288) 54 55 150 343
IS (289) 269 344
AS (290) 270 345
GET (291) 52 346
SET (292) 53 347
WITH (293) 149
RETURN (294) 118 119
CONTINUE (295) 120
BREAK (296) 121
NULL_VAL (297) 323
NEW (298) 328 329
SUPER (299) 104
INSTANCEOF (300) 271
DELETE (301) 291
VOID (302) 152 292
TYPEOF (303) 293
TRY (304) 111 112 113
CATCH (305) 116
FINALLY (306) 117
UNDEFINED (307) 310
THROW (308) 110
FINAL (309) 196
QUESTION (310) 240
LPAREN (311) 70 71 85 116 133 134 135 187 188 202 203 303 334
RPAREN (312) 70 71 85 116 133 134 135 187 188 202 203 303 334
LBRACK (313) 183 184 204 205 301 309 333
RBRACK (314) 183 184 204 205 301 309 333
LCURLY (315) 13 36 83 123 212 213
RCURLY (316) 13 36 83 123 212 213
COLON (317) 126 129 151 152 153 218 241
DBL_COLON (318) 160 161 162 163 168
COMMA (319) 32 56 68 185 206 208 214 215
ASSIGN (320) 67 78 150 189 225
EQUAL (321) 261
STRICT_EQUAL (322) 258
LNOT (323) 294
BNOT (324) 295
NOT_EQUAL (325) 260
STRICT_NOT_EQUAL (326) 259
DIV (327) 284
DIV_ASSIGN (328) 227
PLUS (329) 279 289
PLUS_ASSIGN (330) 229
INC (331) 286 298
MINUS (332) 280 288
MINUS_ASSIGN (333) 230
DEC (334) 287 299
STAR (335) 153 155 178 283 305 308
STAR_ASSIGN (336) 226
MOD (337) 285
MOD_ASSIGN (338) 228
SR (339) 275
SR_ASSIGN (340) 232
BSR (341) 276
BSR_ASSIGN (342) 233
GE (343) 268
GT (344) 266
SL (345) 274
SL_ASSIGN (346) 231
LE (347) 267
LT (348) 265
BXOR (349) 253
BXOR_ASSIGN (350) 235
BOR (351) 251
BOR_ASSIGN (352) 236
LOR (353) 244
BAND (354) 255
BAND_ASSIGN (355) 234
LAND (356) 248
LAND_ASSIGN (357) 237
LOR_ASSIGN (358) 238
E4X_ATTRI (359) 307 308 309
SEMI (360) 21 23 103 136
DOT (361) 176 178 303 304 305 331
E4X_DESC (362) 302
REST (363) 79 80
AND (364) 249
INTRINSIC (365) 201
OR (366) 245
IDENT (367) 170 337 339
EOFX (368) 8
ENUMERABLE (369) 197
EXPLICIT (370) 198
FLOAT_LITERAL (371) 327
DECIMAL_LITERAL (372) 325
OCTAL_LITERAL (373) 326
STRING_LITERAL (374) 43 44 320
HEX_LITERAL (375) 324
INCLUDE (376) 44
INCLUDE_DIRECTIVE (377) 43


Nonterminals, with rules where they appear

$accept (123)
    on left: 0
compilationUnit (124)
    on left: 1 2, on right: 0
as2CompilationUnit (125)
    on left: 3, on right: 1
importDefinitions (126)
    on left: 4 5, on right: 3 4
as2Type (127)
    on left: 6 7, on right: 3
as3CompilationUnit (128)
    on left: 8, on right: 2
packageBlockEntries (129)
    on left: 9 10, on right: 8 9 13
packageDecl (130)
    on left: 11 12, on right: 8
packageBlock (131)
    on left: 13, on right: 11 12
packageBlockEntry (132)
    on left: 14 15 16 17 18 19 20 21, on right: 9
importDefinition (133)
    on left: 22, on right: 4 14 41
semi (134)
    on left: 23, on right: 22 44 46 55 58 104 105 106 110 118 119 120
    121 148 150
classDefinition (135)
    on left: 24, on right: 15
as2ClassDefinition (136)
    on left: 25, on right: 6
interfaceDefinition (137)
    on left: 26, on right: 16
as2InterfaceDefinition (138)
    on left: 27, on right: 7
classExtendsClause (139)
    on left: 28 29, on right: 24 25
interfaceExtendsClause (140)
    on left: 30 31, on right: 26 27
commaIdentifiers (141)
    on left: 32 33, on right: 30 32 34
implementsClause (142)
    on left: 34 35, on right: 25
typeBlock (143)
    on left: 36, on right: 24 25 26 27
typeBlockEntries (144)
    on left: 37 38, on right: 36 37
typeBlockEntry (145)
    on left: 39 40 41 42, on right: 37
as2IncludeDirective (146)
    on left: 43, on right: 42
includeDirective (147)
    on left: 44, on right: 181
blockOrSemi (148)
    on left: 45 46, on right: 49
optionalTypeExpression (149)
    on left: 47 48, on right: 49 63 64 74 75 76 77 116 335
methodDefinition (150)
    on left: 49, on right: 18 40
optionalAccessorRole (151)
    on left: 50 51, on right: 49
accessorRole (152)
    on left: 52 53, on right: 50
namespaceDefinition (153)
    on left: 54, on right: 19
useNamespaceDirective (154)
    on left: 55, on right: 20
commaVariableDeclarators (155)
    on left: 56 57, on right: 56 58 66
variableDefinition (156)
    on left: 58, on right: 17 39
varOrConst (157)
    on left: 59 60, on right: 58 65
optionalVariableInitializer (158)
    on left: 61 62, on right: 63 64
variableDeclarator (159)
    on left: 63 64, on right: 56 58 65
declaration (160)
    on left: 65, on right: 105 138 140
declarationTail (161)
    on left: 66, on right: 65
variableInitializer (162)
    on left: 67, on right: 61
commaParameterDeclaration (163)
    on left: 68 69, on right: 68 71
parameterDeclarationList (164)
    on left: 70 71, on right: 49 335
parameterDeclaration (165)
    on left: 72 73, on right: 68 71
basicParameterDeclaration (166)
    on left: 74 75 76 77, on right: 72
parameterDefault (167)
    on left: 78, on right: 74 75
parameterRestDeclaration (168)
    on left: 79 80, on right: 73
blockEntries (169)
    on left: 81 82, on right: 81 83
block (170)
    on left: 83, on right: 45 87 111 112 113 116 117 336
blockEntry (171)
    on left: 84, on right: 81
condition (172)
    on left: 85, on right: 107 108 122 147 148 149
statement (173)
    on left: 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102
    103, on right: 84 107 108 109 131 133 134 135 147 148 149
superStatement (174)
    on left: 104, on right: 86
declarationStatement (175)
    on left: 105, on right: 88
expressionStatement (176)
    on left: 106, on right: 89
ifStatement (177)
    on left: 107 108, on right: 90
elseClause (178)
    on left: 109, on right: 107
throwStatement (179)
    on left: 110, on right: 100
tryStatement (180)
    on left: 111 112 113, on right: 101
catchBlocks (181)
    on left: 114 115, on right: 112 113 114
catchBlock (182)
    on left: 116, on right: 114
finallyBlock (183)
    on left: 117, on right: 111 112
returnStatement (184)
    on left: 118 119, on right: 99
continueStatement (185)
    on left: 120, on right: 98
breakStatement (186)
    on left: 121, on right: 97
switchStatement (187)
    on left: 122, on right: 96
switchBlock (188)
    on left: 123, on right: 122
caseStatements (189)
    on left: 124 125, on right: 123 124
caseStatement (190)
    on left: 126, on right: 124
optionalDefaultStatement (191)
    on left: 127 128, on right: 130
defaultStatement (192)
    on left: 129, on right: 127
switchStatementList (193)
    on left: 130, on right: 126 129
statements (194)
    on left: 131 132, on right: 130 131
forEachStatement (195)
    on left: 133, on right: 91
forStatement (196)
    on left: 134 135, on right: 92
traditionalForClause (197)
    on left: 136, on right: 135
forInClause (198)
    on left: 137, on right: 133 134
forInClauseDecl (199)
    on left: 138, on right: 137
forInClauseTail (200)
    on left: 139, on right: 137
forInit (201)
    on left: 140 141 142, on right: 136
forCond (202)
    on left: 143 144, on right: 136
forIter (203)
    on left: 145 146, on right: 136
whileStatement (204)
    on left: 147, on right: 93
doWhileStatement (205)
    on left: 148, on right: 94
withStatement (206)
    on left: 149, on right: 95
defaultXMLNamespaceStatement (207)
    on left: 150, on right: 102
typeExpression (208)
    on left: 151 152 153, on right: 47
identifier (209)
    on left: 154, on right: 11 25 27 28 30 32 34 151
propertyIdentifier (210)
    on left: 155 156, on right: 157 159 160 162
qualifier (211)
    on left: 157 158, on right: 160 161
simpleQualifiedIdentifier (212)
    on left: 159 160 161, on right: 164
expressionQualifiedIdentifier (213)
    on left: 162 163, on right: 165
nonAttributeQualifiedIdentifier (214)
    on left: 164 165, on right: 167
qualifiedIdentifier (215)
    on left: 166 167, on right: 302
qualifiedIdent (216)
    on left: 168 169, on right: 154 307 318 331
namespaceName (217)
    on left: 170 171, on right: 168 194
reservedNamespace (218)
    on left: 172 173 174 175, on right: 158 171
dotIdents (219)
    on left: 176 177, on right: 176 178 179
identifierStar (220)
    on left: 178 179, on right: 22
annotations (221)
    on left: 180 181 182, on right: 6 7 15 16 17 18 19 20 39 40 180
    181
annotation (222)
    on left: 183 184, on right: 180
moreAnnotationParams (223)
    on left: 185 186, on right: 185 187
annotationParamList (224)
    on left: 187 188, on right: 183
annotationParam (225)
    on left: 189 190 191, on right: 185 187
modifiers (226)
    on left: 192 193, on right: 6 7 15 16 17 18 19 20 39 40 192
modifier (227)
    on left: 194 195 196 197 198 199 200 201, on right: 192
arguments (228)
    on left: 202 203, on right: 104 306 328
arrayLiteral (229)
    on left: 204 205, on right: 312
elementList (230)
    on left: 206 207, on right: 204
moreAssignmentExpressions (231)
    on left: 208 209, on right: 208 210 222
nonemptyElementList (232)
    on left: 210, on right: 207
element (233)
    on left: 211, on right: 218
objectLiteral (234)
    on left: 212 213, on right: 313
moreLiteralFields (235)
    on left: 214 215 216, on right: 214 217
fieldList (236)
    on left: 217, on right: 212
literalField (237)
    on left: 218, on right: 214 217
fieldName (238)
    on left: 219 220, on right: 218
expression (239)
    on left: 221, on right: 85 110 118 126 150 301 303 309
expressionList (240)
    on left: 222, on right: 106 139 141 143 145 202 333
assignmentExpression (241)
    on left: 223 224, on right: 67 78 208 210 211 221 222 223 241 334
assignmentOperator (242)
    on left: 225 226 227 228 229 230 231 232 233 234 235 236 237 238,
    on right: 223
conditionalExpression (243)
    on left: 239 240, on right: 223 224
conditionalSubExpression (244)
    on left: 241, on right: 240
logicalOrExpression (245)
    on left: 242 243, on right: 239 240 243
logicalOrOperator (246)
    on left: 244 245, on right: 243
logicalAndExpression (247)
    on left: 246 247, on right: 242 243 247
logicalAndOperator (248)
    on left: 248 249, on right: 247
bitwiseOrExpression (249)
    on left: 250 251, on right: 246 247 251
bitwiseXorExpression (250)
    on left: 252 253, on right: 250 251 253
bitwiseAndExpression (251)
    on left: 254 255, on right: 252 253 255
equalityExpression (252)
    on left: 256 257, on right: 254 255 257
equalityOperator (253)
    on left: 258 259 260 261, on right: 257
relationalExpression (254)
    on left: 262 263, on right: 256 257 263
relationalOperator (255)
    on left: 264 265 266 267 268 269 270 271, on right: 263
shiftExpression (256)
    on left: 272 273, on right: 262 263 273
shiftOperator (257)
    on left: 274 275 276, on right: 273
additiveExpression (258)
    on left: 277 278, on right: 272 273 278
additiveOperator (259)
    on left: 279 280, on right: 278
multiplicativeExpression (260)
    on left: 281 282, on right: 277 278 282
multiplicativeOperator (261)
    on left: 283 284 285, on right: 282
unaryExpression (262)
    on left: 286 287 288 289 290, on right: 281 282 286 287 288 289
    292 293 294 295
unaryExpressionNotPlusMinus (263)
    on left: 291 292 293 294 295 296, on right: 290
postfixExpression (264)
    on left: 297 298 299, on right: 291 296 301 302 303 304 305 306
postfixExpression2 (265)
    on left: 300 301 302 303 304 305 306, on right: 297 298 299
e4xAttributeIdentifier (266)
    on left: 307 308 309, on right: 166 304 317
primaryExpression (267)
    on left: 310 311 312 313 314 315 316 317 318, on right: 300 330
constant (268)
    on left: 319 320 321 322 323, on right: 189 190 311
number (269)
    on left: 324 325 326 327, on right: 220 319
newExpression (270)
    on left: 328 329, on right: 315
fullNewSubexpression (271)
    on left: 330 331 332, on right: 328 329 331 332
brackets (272)
    on left: 333, on right: 161 163 332
encapsulatedExpression (273)
    on left: 334, on right: 162 163 316
functionSignature (274)
    on left: 335, on right: 336
functionCommon (275)
    on left: 336, on right: 337 338
functionExpression (276)
    on left: 337 338, on right: 314
ident (277)
    on left: 339 340 341 342 343 344 345 346 347, on right: 24 26 49
    54 55 63 74 75 76 77 79 116 156 168 169 176 178 179 183 184 189
    191 219


state 0

    0 $accept: . compilationUnit $end

    PACKAGE  shift, and go to state 1

    $default  reduce using rule 5 (importDefinitions)

    compilationUnit     go to state 2
    as2CompilationUnit  go to state 3
    importDefinitions   go to state 4
    as3CompilationUnit  go to state 5
    packageDecl         go to state 6


state 1

   11 packageDecl: PACKAGE . identifier packageBlock
   12            | PACKAGE . packageBlock

    PUBLIC     shift, and go to state 7
    PRIVATE    shift, and go to state 8
    PROTECTED  shift, and go to state 9
    INTERNAL   shift, and go to state 10
    DYNAMIC    shift, and go to state 11
    USE        shift, and go to state 12
    XML        shift, and go to state 13
    NAMESPACE  shift, and go to state 14
    IS         shift, and go to state 15
    AS         shift, and go to state 16
    GET        shift, and go to state 17
    SET        shift, and go to state 18
    LCURLY     shift, and go to state 19
    IDENT      shift, and go to state 20

    packageBlock       go to state 21
    identifier         go to state 22
    qualifiedIdent     go to state 23
    namespaceName      go to state 24
    reservedNamespace  go to state 25
    ident              go to state 26


state 2

    0 $accept: compilationUnit . $end

    $end  shift, and go to state 27


state 3

    1 compilationUnit: as2CompilationUnit .

    $default  reduce using rule 1 (compilationUnit)


state 4

    3 as2CompilationUnit: importDefinitions . as2Type
    4 importDefinitions: importDefinitions . importDefinition

    IMPORT   shift, and go to state 28
    LBRACK   shift, and go to state 29
    INCLUDE  shift, and go to state 30

    $default  reduce using rule 182 (annotations)

    as2Type           go to state 31
    importDefinition  go to state 32
    includeDirective  go to state 33
    annotations       go to state 34
    annotation        go to state 35


state 5

    2 compilationUnit: as3CompilationUnit .

    $default  reduce using rule 2 (compilationUnit)


state 6

    8 as3CompilationUnit: packageDecl . packageBlockEntries EOFX

    $default  reduce using rule 10 (packageBlockEntries)

    packageBlockEntries  go to state 36


state 7

  172 reservedNamespace: PUBLIC .

    $default  reduce using rule 172 (reservedNamespace)


state 8

  173 reservedNamespace: PRIVATE .

    $default  reduce using rule 173 (reservedNamespace)


state 9

  174 reservedNamespace: PROTECTED .

    $default  reduce using rule 174 (reservedNamespace)


state 10

  175 reservedNamespace: INTERNAL .

    $default  reduce using rule 175 (reservedNamespace)


state 11

  342 ident: DYNAMIC .

    $default  reduce using rule 342 (ident)


state 12

  340 ident: USE .

    $default  reduce using rule 340 (ident)


state 13

  341 ident: XML .

    $default  reduce using rule 341 (ident)


state 14

  343 ident: NAMESPACE .

    $default  reduce using rule 343 (ident)


state 15

  344 ident: IS .

    $default  reduce using rule 344 (ident)


state 16

  345 ident: AS .

    $default  reduce using rule 345 (ident)


state 17

  346 ident: GET .

    $default  reduce using rule 346 (ident)


state 18

  347 ident: SET .

    $default  reduce using rule 347 (ident)


state 19

   13 packageBlock: LCURLY . packageBlockEntries RCURLY

    $default  reduce using rule 10 (packageBlockEntries)

    packageBlockEntries  go to state 37


state 20

  170 namespaceName: IDENT .
  339 ident: IDENT .

    DBL_COLON  reduce using rule 170 (namespaceName)
    $default   reduce using rule 339 (ident)


state 21

   12 packageDecl: PACKAGE packageBlock .

    $default  reduce using rule 12 (packageDecl)


state 22

   11 packageDecl: PACKAGE identifier . packageBlock

    LCURLY  shift, and go to state 19

    packageBlock  go to state 38


state 23

  154 identifier: qualifiedIdent .

    $default  reduce using rule 154 (identifier)


state 24

  168 qualifiedIdent: namespaceName . DBL_COLON ident

    DBL_COLON  shift, and go to state 39


state 25

  171 namespaceName: reservedNamespace .

    $default  reduce using rule 171 (namespaceName)


state 26

  169 qualifiedIdent: ident .

    $default  reduce using rule 169 (qualifiedIdent)


state 27

    0 $accept: compilationUnit $end .

    $default  accept


state 28

   22 importDefinition: IMPORT . identifierStar semi

    DYNAMIC    shift, and go to state 11
    USE        shift, and go to state 12
    XML        shift, and go to state 13
    NAMESPACE  shift, and go to state 14
    IS         shift, and go to state 15
    AS         shift, and go to state 16
    GET        shift, and go to state 17
    SET        shift, and go to state 18
    IDENT      shift, and go to state 40

    identifierStar  go to state 41
    ident           go to state 42


state 29

  183 annotation: LBRACK . ident annotationParamList RBRACK
  184           | LBRACK . ident RBRACK

    DYNAMIC    shift, and go to state 11
    USE        shift, and go to state 12
    XML        shift, and go to state 13
    NAMESPACE  shift, and go to state 14
    IS         shift, and go to state 15
    AS         shift, and go to state 16
    GET        shift, and go to state 17
    SET        shift, and go to state 18
    IDENT      shift, and go to state 40

    ident  go to state 43


state 30

   44 includeDirective: INCLUDE . STRING_LITERAL semi

    STRING_LITERAL  shift, and go to state 44


state 31

    3 as2CompilationUnit: importDefinitions as2Type .

    $default  reduce using rule 3 (as2CompilationUnit)


state 32

    4 importDefinitions: importDefinitions importDefinition .

    $default  reduce using rule 4 (importDefinitions)


state 33

  181 annotations: includeDirective . annotations

    LBRACK   shift, and go to state 29
    INCLUDE  shift, and go to state 30

    $default  reduce using rule 182 (annotations)
